@@ -73,7 +73,7 @@ function testSuite() {
       assertFalse(result.hasOwnProperty("version"));
       assertTrue(result.hasOwnProperty("license"));
     },
-    
+
     testCanAccessEngineRw : function() {
       arango.reconnect(endpoint, db._name(), "test_rw", "testi");
       let result = arango.GET("/_api/engine");
@@ -85,7 +85,7 @@ function testSuite() {
       let result = arango.GET("/_api/engine");
       assertTrue(result.hasOwnProperty("name"));
     },
-    
+
     testCanAccessEngineStatsRw : function() {
       arango.reconnect(endpoint, db._name(), "test_rw", "testi");
       let result = arango.GET("/_api/engine/stats");
@@ -98,7 +98,7 @@ function testSuite() {
       assertTrue(result.error);
       assertEqual(403, result.code);
     },
-    
+
     testCanAccessAdminStatusRw : function() {
       arango.reconnect(endpoint, db._name(), "test_rw", "testi");
       let result = arango.GET("/_admin/status");
@@ -120,7 +120,7 @@ function testSuite() {
       assertFalse(result.hasOwnProperty("pid"));
       assertFalse(result.hasOwnProperty("foxxApi"));
     },
-    
+
     testCanAccessAdminMetricsRw : function() {
       arango.reconnect(endpoint, db._name(), "test_rw", "testi");
       let result = arango.GET("/_admin/metrics");
@@ -132,7 +132,19 @@ function testSuite() {
       assertTrue(result.error);
       assertEqual(403, result.code);
     },
-    
+
+    testCanAccessAdminSystemReportRw : function() {
+      arango.reconnect(endpoint, db._name(), "test_rw", "testi");
+      let result = arango.GET("/_admin/system-report");
+    },
+
+    testCanAccessAdminSystemReportRo : function() {
+      arango.reconnect(endpoint, db._name(), "test_ro", "testi");
+      let result = arango.GET("/_admin/system-report");
+      assertTrue(result.error);
+      assertEqual(403, result.code);
+    },
+
     testCanAccessAdminLogRw : function() {
       arango.reconnect(endpoint, db._name(), "test_rw", "testi");
       let result = arango.GET("/_admin/log");
@@ -152,7 +164,7 @@ function testSuite() {
       assertFalse(result.hasOwnProperty("timestamp"));
       assertFalse(result.hasOwnProperty("text"));
     },
-    
+
     testCanAccessAdminLogLevelRw : function() {
       arango.reconnect(endpoint, db._name(), "test_rw", "testi");
       let result = arango.GET("/_admin/log/level");
@@ -168,7 +180,7 @@ function testSuite() {
       assertTrue(result.error);
       assertEqual(403, result.code);
     },
-    
+
   };
 }
 jsunity.run(testSuite);
