@@ -1,6 +1,8 @@
 devel
 -----
 
+* Add acquisition of system report to arangod instances.
+
 * React dev mode now supports hot reload combined with proxy for development.
 
 * Added read-write-locks for parallel move shard operations.
